<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <!--padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->
  	<include layout="@layout/topbar_2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:gravity="left"
        android:text="您的信息（必填）"
        android:textColor="@color/black"  />

   <LinearLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        android:orientation="vertical"
        android:padding="8dip" >

        <!-- 账号 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/login_item4_str"
                android:textColor="@color/black" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" >

                <EditText
                    android:id="@+id/register_username_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/login_edittext"
                    android:hint="@string/login_itemtips_str"
                    android:inputType="phone"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/register_check_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="15dip"
                    android:background="@drawable/login_input_arrow"
                    android:contentDescription="@string/app_name" />
            </FrameLayout>
        </LinearLayout>
        
       <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#f0f0f0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/login_item5_str"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" >

                <EditText
                    android:id="@+id/register_smscode_edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2.98"
                    android:background="@drawable/login_edittext"
                    android:hint="@string/login_itemtips1_str"
                    android:inputType="number"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/register_getsmscode"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textSize="12sp"
                    android:layout_gravity="right|center_vertical"
                    android:contentDescription="@string/app_name"
                    android:text="@string/login_item18_str" />
            </LinearLayout>
        </LinearLayout>
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#f0f0f0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:layout_gravity="center_vertical"
                android:text="@string/login_item6_str"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/register_truename_edit"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="3.00"
                android:background="@drawable/login_edittext"
                android:hint="@string/login_itemtips2_str"
                android:singleLine="true" />
        </LinearLayout>

       <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#f0f0f0" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:layout_gravity="center_vertical"
                android:text="@string/login_item7_str"
                 android:textColor="@color/black"  />

            <EditText
                android:id="@+id/register_password_edit"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="3.00"
                android:background="@drawable/login_edittext"
                android:hint="@string/login_itemtips3_str"
                android:singleLine="true"
                android:inputType="textPassword" />
        </LinearLayout>
   
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="left"
            android:text="@string/login_item3_str"
             android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_edittext" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="15dp"
                 android:layout_gravity="center_vertical"
                android:text="@string/login_item8_str"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/register_invite_edit"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2.53"
                android:background="@drawable/login_edittext"
                android:hint="@string/login_itemtips4_str"
                android:singleLine="true"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/register_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/login_item9_str" />
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/register_agreement"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="right"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_itemtips7_str"
        android:textColor="@color/black" />
     <TextView
        android:id="@+id/register_agreement1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="left"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autoLink="web|email"
        android:text="@string/login_itemtips8_str" />
</LinearLayout>
</LinearLayout>