<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:minHeight="0dp"
    android:orientation="vertical" >

    <!--padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->
	<include layout="@layout/topbar_2"/>

    <LinearLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/textview_border"
        android:orientation="vertical"
        android:padding="15dip" >

        <!-- 账号 -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/login_item8_str"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:weightSum="7"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/getpassword_account_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:background="@drawable/login_edittext"
                    android:hint="@string/login_itemtips_str"
                    android:singleLine="true"
                    android:inputType="phone" />

                <Button
                    android:id="@+id/btn_getsmspwd_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_weight="3"
                    android:background="#0f9006"
                    android:contentDescription="@string/app_name"
                    android:minHeight="30dip"
                    android:padding="0dp"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:text="获取验证码"
                    android:textColor="#fff"/>

            </LinearLayout>
        </LinearLayout>

       <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#f0f0f0" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:layout_gravity="center_vertical"
                android:text="@string/login_item5_str"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/getpassword_valicode_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@drawable/login_edittext"
                android:hint="@string/login_itemtips5_str"
                android:singleLine="true"
                android:inputType="number" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#f0f0f0" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:layout_gravity="center_vertical"
                android:text="@string/login_item14_str"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/getpassword_old_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@drawable/login_edittext"
                android:hint="@string/login_itemtips3_str"
                android:singleLine="true"
                android:inputType="textPassword" />
        </LinearLayout>
        
         <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#f0f0f0" />
         
             <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:layout_gravity="center_vertical"
                android:text="@string/login_item15_str"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/getpassword_new_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@drawable/login_edittext"
                android:hint="@string/login_itemtips6_str"
                android:singleLine="true"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

   

    <Button
        android:id="@+id/btn_findpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/pay_item5_str" />
    <LinearLayout 
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
	    <TextView
	        android:id="@+id/register_agreement"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/login_itemtips7_str"
	        android:textColor="@color/black" />
	    
	    <TextView 
	        android:id="@+id/register_protocl"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/login_itemtips8_str"/>
	</LinearLayout>
</LinearLayout>